import javax.swing.*;
import java.awt.*;

public class KitchenPapa {
    public static void main(String[] args) {
        SwingUtilities.invokeLater(() -> new GameControl());
//        new GameControl();

    }
}
